Fixed Brand Name size on mobile

--- a/css/custom-css/Landing-16.css
+++ b/css/custom-css/Landing-16.css
@@ -167,6 +167,9 @@ html,body{
         height: auto;
         padding:10%;
     }
+    #brand-name{
+        font-size: 25px;
+    }
 }
 @media screen and (min-width: 992px){
     #main-nav{
